# BioFastq-a

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark.sh  install.sh  paper_draft.md  test_sample.fastq
.github/workflows/: ci.yml
Formula/: biofastq-a.rb
docs/: index.html
docs/pkg/: biofastq_a_wasm.d.ts  biofastq_a_wasm.js  biofastq_a_wasm_bg.wasm  biofastq_a_wasm_bg.wasm.d.ts
recipes/biofastq-a/: build.sh  meta.yaml
src/: analysis.rs  main.rs  report.rs  tui.rs  types.rs
src/analysis/: adapters.rs  io.rs  kmers.rs  metrics.rs  mmap_reader.rs  mod.rs
test_data/: sample.fastq
tests/: accuracy.rs
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs  metrics.rs  report.rs  types.rs
wasm/www/: index.html
