[package]
name = "biofastq-a"
version = "2.0.0"
edition = "2021"
description = "BioFastq-A - High-performance FASTQ/FASTA quality analysis with HTML reports"

[dependencies]
needletail = "0.7"
rayon = "1.10"
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
