[package]
name = "biofastq-a"
version = "2.1.0"
edition = "2021"
description = "BioFastq-A - High-performance FASTQ/FASTA quality analysis with HTML reports"

[dependencies]
needletail = "0.7"
rayon = "1.10"
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
flate2 = "1"                      # gzip writer for trimmed output
hyperloglog = "1.0.3"             # accurate dup estimation without full HashSet
aho-corasick = "1"                # multi-pattern adapter matching
xxhash-rust = { version = "0.8", features = ["xxh3"] }  # fast non-crypto hash
memchr = "2"                      # SIMD-accelerated byte searching
memmap2 = "0.9"                   # memory-mapped file I/O
crossbeam-channel = "0.5"         # lock-free MPSC channel for I/O+compute pipeline

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
