[package]
name = "biofastq-a-wasm"
version = "2.3.0"
edition = "2021"
description = "BioFastq-A WebAssembly browser build — same metrics as native, no server required"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aho-corasick = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memchr = "2"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
